--- a/css/tooplate-waso-strategy.css
+++ b/css/tooplate-waso-strategy.css
@@ -14,8 +14,8 @@ Free Bootstrap 5 HTML Template
 -----------------------------------------*/
 :root {
   --white-color:                  #ffffff;
-  --primary-color:                #f9c10b;
-  --secondary-color:              #dc3545;
+  --primary-color:                #6e0bf9;
+  --secondary-color:              #35dc7b;
   --section-bg-color:             #f5f5f5;
   --dark-color:                   #000000;
   --p-color:                      #717275;
